[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "node-runner"
description = "Parallel execution of command across multiple nodes"
readme = "README.md"
version = '0.1.0'
authors = [
  {name = "fengli", email = "fengli@grandomics.com"}
]
maintainers = [
  {name = "fengli", email = "fengli@grandomics.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "fabric"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/audreyr/tester/issues"
changelog = "https://github.com/audreyr/tester/blob/master/changelog.md"
homepage = "https://github.com/audreyr/tester"


[project.scripts]
node-runner = "node_runner.__main__:program.run"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

